@@ -89,7 +89,7 @@ exists_product()
 {
   local _prod=${1}
 
-  [[ -a ${iam_top}/products          ]] || \
+  [[ -a ${iam_top}/products          ]] || \
     exit   $ERROR_FILE_NOT_FOUND
 
   [[ -a ${iam_top}/products/${_prod} ]] || \
@@ -317,7 +317,7 @@ storeUserConfig(userConfigFile=nmUC,userKeyFile=nmUK,nm='true')
 y
 exit()
 "
-    echo "${_wlst}" |=
+    echo "${_wlst}" | ${WL_HOME}/common/bin/wlst.sh -loadProperties ${opt_w}
 
     log "Finished creating domain keyfiles"
 
@@ -400,6 +400,196 @@ config_webtier()
     cp ${_webg}/oblog_config_wg.xml ${_webg}/oblog_config.xml
   fi
   log "Webgate: done"
+}
+
+# create weblogic domain for OIA including:
+# nodemanager, boot properties, datasources, managed server
+# 
+oia_wlst_exec()
+{
+  # create domain or deploy OIA application
+  local _operation=${1}
+
+  case ${_operation} in
+    wlstdom)
+      local _start_wlst=${DEPLOYER}/lib/weblogic/wlst/create_oia_domain.py
+      ;;
+    oia)
+      local _start_wlst=${DEPLOYER}/lib/weblogic/wlst/deploy_oia_app.py
+        ;;
+      *)
+        exit $ERROR_FILE_NOT_FOUND
+        ;;
+    esac
+
+  local _wls_dom_template=${WL_HOME}/common/templates/domains/wls.jar
+  local _create_domain_wlst=${DEPLOYER}/lib/weblogic/wlst/create_oia_domain.py
+  local _default_prop=${DEPLOYER}/user-config/oia/default.properties
+  local _user_prop=${IDM_PROP}
+
+  JAVA_OPTIONS="${JAVA_OPTIONS} -Xmx2048m -Xms2048m -Djava.net.preferIPv4Stack=true"
+
+  CLASSPATH="${CLASSPATH}${CLASSPATHSEP}${FMWLAUNCH_CLASSPATH}${CLASSPATHSEP}"
+  CLASSPATH+="${DERBY_CLASSPATH}${CLASSPATHSEP}${DERBY_TOOLS}${CLASSPATHSEP}"
+  CLASSPATH+="${POINTBASE_CLASSPATH}${CLASSPATHSEP}${POINTBASE_TOOLS}"
+  JVM_ARGS="-Dprod.props.file='${WL_HOME}'/.product.properties \
+    ${WLST_PROPERTIES} ${JVM_D64} \
+    -Xms256m \
+    -Xmx1024m \
+    -XX:PermSize=128m \
+    -Dweblogic.management.confirmKeyfileCreation=true \
+    ${CONFIG_JVM_ARGS}"
+
+  source ${WL_HOME}/server/bin/setWLSEnv.sh
+  eval '"${JAVA_HOME}/bin/java"' ${JVM_ARGS} weblogic.WLST \
+    -skipWLSModuleScanning ${_start_wlst} \
+    ${_wls_dom_template} \
+    ${_default_prop} \
+    ${_user_prop} \
+    ${oiaWlUser} \
+    ${oiaWlPwd}
+}
+
+# unpack OIA instance
+#
+oia_explode()
+{
+  # conflicting libs
+  c_libs[0]=jrf-api.jar
+  c_libs[1]=stax-1.2.0.jar
+  c_libs[2]=stax-api-1.0.1.jar
+  c_libs[3]=tools.jar
+  c_libs[4]=ucp.jar
+  c_libs[5]=xfire-all-1.2.5.jar
+
+
+  if [ -a "${MW_HOME}" ]
+  then
+    unzip -q ${s_oia}/app-archive/${oia_name} -d ${RBACX_HOME}
+
+    mv ${RBACX_HOME}/sample/* ${RBACX_HOME}
+    rm -rf ${RBACX_HOME}/sample
+
+    mkdir ${RBACX_HOME}/{_rbacx_orig,rbacx}
+    cp ${RBACX_HOME}/rbacx.war ${RBACX_HOME}/_rbacx_orig
+    cd ${RBACX_HOME}/rbacx ; jar -xf ../rbacx.war ; rm ../rbacx.war
+
+    # copy libraries needed by OIA
+    cp ${s_oia}/ext/*.jar ${RBACX_HOME}/rbacx/WEB-INF/lib/
+
+    # Remove conflicting libs
+    #
+    for lib in ${c_libs[@]}; do
+      rm ${RBACX_HOME}/rbacx/WEB-INF/lib/${lib}
+    done
+    echo "Done unpacking OIA."
+    echo ""
+  else
+    log "Analytics: ${MW_HOME} does not exist. Please install WLS first."
+  fi
+}
+
+# Apply rbacx configurations by patching the OOTB rbacx instance
+# with the changes from a preconfigured rbacx instance
+# 
+# deployment type:
+# 0 - single instance
+# 1 - clustered
+#
+oia_appconfig()
+{
+  deployment_type=${1}
+
+  cd ${RBACX_HOME}
+  if [ "${deployment_type}" == "single" ]
+  then
+    echo "Patching RBACX_HOME for single instance deployment.."
+    patch -p1 --silent < ${DEPLOYER}/user-config/oia/rbacx_single.patch
+  elif [ "${deployment_type}" == "cluster" ]
+  then
+    echo "Patching RBACX_HOME for cluster deployment.."
+    patch -p1 --silent < ${DEPLOYER}/user-config/oia/rbacx_cluster.patch
+  fi
+  echo "Done patching RBACX_HOME."
+  echo ""
+
+  # Encrypt OIMJDBC Password
+  java -jar ${RBACX_HOME}/rbacx/WEB-INF/lib/vaau-commons-crypt.jar \
+    -encryptProperty \
+    -cipherKeyProperties ${RBACX_HOME}/conf/cipherKey.properties \
+    -propertyFile ${RBACX_HOME}/conf/oimjdbc.properties \
+    -propertyName oim.jdbc.password
+  echo "Encrypted OIM JDBC Password"
+
+
+}
+# OIM-OIA integration steps
+#
+oia_oim_integrate()
+{
+  # oim server libs
+  oim_lib[0]=xlCrypto.jar
+  oim_lib[1]=wlXLSecurityProviders.jar
+  oim_lib[2]=xlAuthentication.jar
+  oim_lib[3]=xlLogger.jar
+
+  # design console libs
+  dc_lib[0]=xlAPI.jar
+  dc_lib[1]=xlCache.jar
+  dc_lib[2]=xlDataObjectBeans.jar
+  dc_lib[3]=xlDataObjects.jar
+  dc_lib[4]=xlUtils.jar
+  dc_lib[5]=xlVO.jar
+  dc_lib[6]=oimclient.jar
+  dc_lib[7]=iam-platform-utils.jar
+
+  local _oia_lib=${RBACX_HOME}/rbacx/WEB-INF/lib
+
+  # copy OIM designconsole and server libraries to OIA
+  for lib in ${oim_lib[@]}; do
+    cp ${OIM_MW_HOME}/iam/server/lib/${lib} ${_oia_lib}
+  done
+
+  for lib in ${dc_lib[@]}; do
+    cp ${OIM_MW_HOME}/iam/designconsole/lib/${lib} ${_oia_lib}
+  done
+
+  cp ${OIM_MW_HOME}/oracle_common/modules/oracle.jrf_11.1.1/jrf-api.jar ${_oia_lib}
+
+  cp ${OIM_WL_HOME}/server/lib/wlfullclient.jar ${_oia_lib}
+
+  # copy designconsole config to OIA
+  mkdir -p ${RBACX_HOME}/xellerate
+  cp -R ${OIM_MW_HOME}/iam/designconsole/config ${RBACX_HOME}/xellerate
+
+  # patching workflow configurations
+  cd ${RBACX_HOME}
+  patch -p0 --silent < ${DEPLOYER}/user-config/oia/rbacx_workflow.patch
+}
+
+# configure OIA weblogic domain
+# 
+oia_domconfig()
+{
+  # setDomainEnv.sh patch
+  cd ${DOMAIN_HOME}/bin
+  patch -p0 < ${DEPLOYER}/user-config/oia/oia_setdomenv.patch
+}
+
+# install weblogic server
+#
+weblogic_install()
+{
+  local _product_home=${1}
+
+  if ! [ -a "${iam_top}/products/${_product_home}/wlserver_10.3" ] ; then
+    echo "Installing Weblogic Server..."
+    java -d64 -jar ${s_wls} \
+      -mode=silent \
+      -silent_xml=${DEPLOYER}/user-config/wls/wls_install.xml
+  else
+    echo "Skipped: Weblogic server installation"
+  fi
 }
 
 #  deploy standard lib acStdLib for wlst ----------------------------
